--- a/ogsde-man.tex
+++ b/ogsde-man.tex
@@ -121,7 +121,7 @@ This document as well as its sources are published under Creative Commons Attrib
 
 \include{ch04-visualisation}
 
-%\include{ch05-workflows}
+\include{ch05-workflows}
 
 \appendix
 
