added workflow chapter incl example for creating subsurface mesh

--- a/app-literature.tex
+++ b/app-literature.tex
@@ -64,4 +64,21 @@ Selle B, Rink K, Kolditz O: Recharge and discharge controls on groundwater trave
 \bibitem{sun:nankou}
 Sun F, Shao H, Wang W, et al.: Groundwater deterioration in Nankou--a suburban area of Beijing: data assessment and remediation scenarios. \emph{Environ Earth Sci,} \textbf{67(6):}1573--1586, (2012)
 
+
+\subsection*{Cited Literature}
+
+\bibitem{knupp:quality}
+P. M. Knupp: Achieving finite element mesh quality via optimization of the Jacobian matrix norm and associated quantities. Part I--a framework for surface mesh optimization. \emph{Int J Numer Meth Eng,} \textbf{48:}401--420, (2000)
+
+\bibitem{shewchuk:quality}
+J. R. Shewchuk: What is a Good Linear Finite Element? Interpolation, Conditioning, Anisotropy, and Quality Measures. \emph{Department of Electrical Engineering and Computer Science, University of Berkeley,} (2002)
+
+\bibitem{tetgen:software}
+H. Si: TetGen -- A Quality Tetrahedral Mesh Generator and Three-Dimensional Delaunay Triangulator. \emph{WIAS Technical Report No. 13,} Weierstrass Institute for Applied Analysis and Stochastics, (2013) \\
+\url{http://www.tetgen.org}
+
+\bibitem{geuzaine:gmsh}
+C. Geuzaine and J.-F. Remacle: Gmsh: a three-dimensional finite element mesh generator with built-in pre- and post-processing facilities. \emph{Int J Numer Meth Eng,} \textbf{79(11):}1309--1331, (2009) \\
+\url{http://geuz.org/gmsh}
+
 \end{thebibliography} 
